feat: save raw usage
